--- a/app/views/spree/admin/orders/bookkeeping_documents/index.html.erb
+++ b/app/views/spree/admin/orders/bookkeeping_documents/index.html.erb
@@ -30,8 +30,7 @@
     <%= link_to Spree.t('print_invoice.delete_all'), spree.destroy_admin_order_bookkeeping_documents_path(@order.number), 'data-confirm' => 'Are you sure want to activate this merchant?', :method => :delete, :class => 'btn btn-danger' %>
   </div>
 <% else %>
-  <div class="alert alert-info no-objects-found">
-    <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::BookkeepingDocument)) %>,
+  <div class="alpha twelve columns no-objects-found">
     <%= link_to(Spree.t('print_invoice.generate_documents'), spree.admin_order_bookkeeping_documents_path(@order.number), method: :post) if can? :create, Spree::BookkeepingDocument %>!
   </div>
 <% end %>
